--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,9 @@
     <string name="enter_your_login">Введите логин</string>
     <string name="enter_your_password">Введите пароль</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="title_activity_regestration">RegestrationActivity</string>
+    <string name="title_activity_regestration">LoginActivity</string>
     <string name="default_web_client_id">925339290668-lsus0l049n9fbdjlp6esrdd8h56fbu4i.apps.googleusercontent.com</string>
-    <string name="title_activity_history">HistoryActivity</string>
-    <string name="title_activity_profile">ProfileActivity</string>
-    <string name="title_activity_graphics">GraphicsActivity</string>
+    <string name="telegram_of_creator">https://t.me/max_shik</string>
 
     <string name="value">Значение</string>
     <string name="category">Категория</string>
@@ -15,7 +13,7 @@
     <string name="main">Главная</string>
     <string name="transaction_history">История транзакций</string>
     <string name="history">История</string>
-    <string name="my_finance">Мои финансы</string>
+    <string name="my_finance">Финансы</string>
     <string name="profile">Профиль</string>
     <string name="google_sign_in_failed">Ошибка входа в Google.</string>
     <string name="password_reset_email_sent">Письмо для сброса пароля отправлено на %1$s</string>
@@ -50,7 +48,7 @@
     <string name="add_income">Добавить доход</string>
     <string name="add">Добавить</string>
     <string name="please_enter_sum">Пожалуйста, введите сумму!</string>
-    <string name="add_transaction_title">Заполните все поля</string>
+    <string name="add_transaction_title">Заполните нужные поля</string>
     <string name="enter_expense_amount">Введите потраченную сумму</string>
     <string name="enter_income_amount">Введите заработанную сумму</string>
     <string name="notes_label">Заметки (не более 50 сим.)</string>
@@ -62,10 +60,10 @@
     <string name="choice_category">Выберите категорию или введите свою</string>
     <string name="choice_date">Выберите дату</string>
     <string name="general_information_title">Общая информация</string>
-    <string name="balance_text">Баланс: %.2f BYN</string>
-    <string name="income_text">Доход: %.2f BYN</string>
-    <string name="expenses_text">Расходы: %.2f BYN</string>
-    <string name="expenses_today_text">Потрачено за сегодня: %.2f BYN</string>
+    <string name="balance_text">Баланс: </string>
+    <string name="income_text">Доход: </string>
+    <string name="expenses_text">Расходы: </string>
+    <string name="expenses_today_text">Потрачено за сегодня: </string>
     <string name="start_new_period">Начать новый период</string>
     <string name="confirmation_dialog_title">Вы уверены, что хотите начать новый период?</string>
     <string name="confirmation_dialog_message">Это нужно, чтобы вы самостоятельно отмеряли промежутки времени, а после смотреть на графиках траты за определенные периоды.</string>
@@ -78,11 +76,36 @@
     <string name="earned_text">Заработано: %.2f BYN</string>
     <string name="notifications_button">Напоминания</string>
     <string name="set_limit_button">Установить лимит на день</string>
-    <string name="about_button">О приложении</string>
+    <string name="send_error">Сообщить об ошибке</string>
     <string name="github_button">Мы на Github</string>
     <string name="sign_out_button">Выйти из аккаунта</string>
     <string name="date">Дата</string>
     <string name="delete">Удалить</string>
     <string name="github_link">https://github.com/maxshik/Tracking-Expenses</string>
     <string name="enter_money">Введите лимит на день</string>
+    <string name="about_app">О приложении</string>
+    <string name="create_family_account">Создать семейный аккаунт</string>
+    <string name="family">Семья</string>
+    <string name="family_account">Семейный аккаунт</string>
+    <string name="settings">Настройки</string>
+    <string name="no_members">Нет членов семьи</string>
+    <string name="family_member">Член семьи</string>
+    <string name="quote_about_family">Семья подобна ветвям на дереве. Мы растем в разных направлениях, но наши корни остаются одним целым</string>
+    <string name="information_about_family">"Семейный аккаунт - это возможность контролировать траты определнной группы людей на одном аккаунте. Для того, чтобы создать семью нажмите на соответствующую кнопку. Не используйте личный профиль для создания семьи: для этих нужд создайте отдельный аккаунт. Добавляя транзакции на аккаунтах членов семьи они автоматически добавляются на семейный аккаунт. У него все те же функции, что и обычного пользователя.</string>
+    <string name="confirmation_dialog_for_delete">Вы уверены что хотите удалить транзакцию?</string>
+    <string name="confirmation_dialog_message_when_user_create_family">Вы уверены что хотите создать семью?</string>
+    <string name="warning_about_effect_after_creation_family">Перед тем как нажать "Создать" ознакомьтесь с информацией на экране о последствиях.</string>
+    <string name="create">Создать</string>
+    <string name="success_information_about_family">Вы создали семью</string>
+    <string name="delete_family_information">Вы удалили семью</string>
+    <string name="are_you_sure_that_you_want_delete_family">Вы уверены что хотите удалить семью?</string>
+    <string name="effect_after_delete_family">Все транзакции, добавленные членами семьи ранее, остануться на этом аккаунте. Вы можете заново создать семью, нажав на соответствующую кнопку.</string>
+    <string name="send_query_title">Введить код семьи</string>
+    <string name="information_about_query">Вы можете его получить у создателя семьи</string>
+    <string name="send">Отправить</string>
+    <string name="error_send_query">Ошибка, запрос не отправлен.</string>
+    <string name="success_information_about_send_query">Запрос успешно отправлен</string>
+    <string name="enter_family_code">Введите код семьи</string>
+    <string name="empty_family_code">Заполните поле с кодом!</string>
+    <string name="current_day_limit">Текущий дневной лимит: %1$.2f</string>
 </resources>
